[package]
name = "xeonvpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
xeonvpn-core = { path = "../../crates/xeonvpn-core" }
xeonvpn-net = { path = "../../crates/xeonvpn-net" }
xeonvpn-quic = { path = "../../crates/xeonvpn-quic" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
